--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=EtourProject
 # --- Data Source ---
 spring.datasource.url=jdbc:mysql://localhost:3306/etour_db
 spring.datasource.username=root
-spring.datasource.password=Vtm444@@
+spring.datasource.password=pass123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # --- Hibernate Settings ---
@@ -12,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # --- Server Port (Optional) ---
-server.port=8080
+server.port=8086
